syntax = "proto3";

package pairing.v1;

option go_package = "github.com/nohns/proto/pairing/v1;pairingv1";

service PairingService {
rpc Register(RegisterRequest) returns (RegisterResponse);
}


message RegisterRequest {
    bytes csr = 1;
    bytes public_key = 2;
}

message RegisterResponse {
    string bridge_id = 1;
    bytes cert = 2;
}




